# sar-operations-planner

./: LICENSE  index.html
assets/: index-B3_eCtHz.js  index-BI5yad_Q.css  index-BSmTNjsc.css  index-BrUUNvia.js  index-Brw3IH4T.css  index-CA69UoW8.css  index-CAtPuTf_.css  index-CLVyf5s3.js  index-CNM8gG0D.css  index-CQ_f7X2W.js  index-Cdkvli0D.js  index-CnKeER2i.js  index-D7uamwFs.js  index-DYj-7lYc.js  index-DYqR363P.css  index-DlEWzmjp.js  index-PeDXQ1oo.js  index-ZvWHPoiq.js  index-aT3LWaRj.css  index-jAFsP4LL.js  index-ofo_nzGu.css
docs/superpowers/plans/: 2026-04-23-mockup-implementation.md
docs/superpowers/specs/: 2026-04-23-cmrs-team-planner-design.md
manager-app-tauri/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
manager-app-tauri/src/: App.tsx  db.ts  index.css  mock-data.ts  store.ts
manager-app-tauri/src-tauri/: Cargo.toml  tauri.conf.json
manager-app-tauri/src-tauri/capabilities/: default.json
manager-app-tauri/src-tauri/src/: lib.rs  main.rs
manager-app-tauri/src/components/: ConfirmDialog.tsx  StatusBadge.tsx
manager-app-tauri/src/components/manager/: CreateMissionDialog.tsx  CreateTaskDialog.tsx  EditTaskDialog.tsx  KanbanCard.tsx  MissionControls.tsx  MissionDashboard.tsx  ParticipantsPanel.tsx  TasksKanban.tsx  (+1 more)
manager-app-tauri/src/locales/: hr.json
mockup/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
mockup/src/: App.tsx  i18n.ts  mock-data.ts  store.test.ts  store.ts  types.ts
mockup/src/components/: PhoneFrame.tsx  ViewSwitcher.tsx
mockup/src/locales/: hr.json
(+18 files in other folders)
