[package]
name = "sar-operations-planner"
version = "0.1.0"
description = "SAR Operations Planner for HGSS"
authors = ["Dalibor Kusic"]
edition = "2021"

[lib]
name = "sar_operations_planner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
